Fix file rename leading to file being placed in the toplevel directory

BUG: 279926